# vmark

./: .codex-toolkit.md  .dependency-cruiser-known-violations.json  .dependency-cruiser.cjs  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODING_GUIDE.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vmark-security-hardening.md
.claude/: README.md  ralph-loop.local.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  windows.json
src-tauri/icons-dev/: icon.icns
src-tauri/locales/: de.yml  en.yml  es.yml  fr.yml  it.yml  ja.yml  ko.yml  pt-BR.yml  zh-CN.yml  zh-TW.yml
src-tauri/resources/genies/creative/: continue.md  expand.md  rephrase.md  vivid.md
src-tauri/resources/genies/editing/: condense.md  fix-grammar.md  polish.md  simplify.md
src-tauri/resources/genies/structure/: headline.md  outline.md  summarize.md
src-tauri/resources/genies/tools/: rewrite-in-english.md  translate.md
src-tauri/src/: ai_provider.rs  app_paths.rs  content_search.rs  dock_recent.rs  file_tree.rs  genies.rs  lib.rs  macos_menu.rs  mcp_bridge.rs  mcp_config.rs  mcp_server.rs  menu.rs  menu_events.rs  pdf_export.rs  prompts.rs  pty.rs  quit.rs  tab_transfer.rs  watcher.rs  window_manager.rs  workspace.rs
src-tauri/src/ai_provider/: cli.rs  detection.rs  mod.rs  rest_api.rs  rest_providers.rs  types.rs
src-tauri/src/genies/: commands.rs  install.rs  mod.rs  parsing.rs  scanning.rs  tests.rs  types.rs
src-tauri/src/hot_exit/: commands.rs  coordinator.rs  migration.rs  mod.rs  session.rs  storage.rs  validation.rs
src-tauri/src/mcp_bridge/: commands.rs  mod.rs  server.rs  state.rs  types.rs
src-tauri/src/mcp_config/: commands.rs  config_io.rs  mod.rs  providers.rs  types.rs
src-tauri/src/menu/: commands.rs  custom_menu.rs  default_menu.rs  dynamic.rs  localized.rs  mod.rs
src-tauri/src/pandoc/: commands.rs
src-tauri/src/pdf_export/: bookmarks.rs  commands.rs  mod.rs  renderer.rs
src-tauri/src/workflow/: commands.rs  mod.rs  runner.rs  snapshots.rs  types.rs
(+1904 files in other folders)
