[package]
name = "vmark"
version = "0.5.4"
description = "AI friendly markdown editor"
authors = ["Xiaolai"]
edition = "2021"

[lib]
name = "vmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-mcp-bridge = "0.8"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tauri-plugin-pty = "0.2"
toml = "0.8"
dirs = "5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-window-state = "2"
tempfile = "3"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSImage", "NSResponder", "NSDocumentController", "NSPrintInfo", "NSPrintOperation", "NSView", "NSWindow", "NSGraphics"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSData", "NSDate", "NSRunLoop", "NSError", "NSDictionary"] }
dispatch2 = "0.2"
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKNavigation", "WKNavigationDelegate", "WKPDFConfiguration", "block2", "objc2-core-foundation"] }
objc2-pdf-kit = { version = "0.3", features = ["PDFDocument", "PDFOutline", "PDFPage", "PDFDestination"] }
objc2-core-foundation = { version = "0.3", features = ["CFRunLoop", "CFString"] }
block2 = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
